# coin-profitability-scraper

./: README.md  pyproject.toml
.github/workflows/: validate_and_run.yml
coin_profitability_scaper/: __init__.py
dolt_schema/: crypto51_coins.sql  cryptodelver_coins.sql  cryptoslate_coins.sql  gold_algorithms.sql  minerstat_coins.sql  miningnow_algorithms.sql  miningnow_asics.sql  miningnow_coins.sql  notify_log_new_algorithms.sql  silver_stacked_coins.sql  silver_stacked_miners.sql  whattomine_coins.sql  whattomine_miners.sql  wheretomine_coins.sql
src/coin_profitability_scraper/: __init__.py  data_util.py  dolt_updater.py  dolt_util.py  generate_sql_schemas.py  load_minerstat_data.py  step_1_scrape.py  step_2_parse_scrape.py  step_3_algo_report.py  step_9_dolt_write.py  tables.py  util.py
src/coin_profitability_scraper/crypto51/: __init__.py  crypto51_pipeline.py  step_1_scrape_main_page.py
src/coin_profitability_scraper/crypto_slate/: __init__.py  crypto_slate_pipeline.py  step_1_scrape.py  step_2_parse_scrape.py  step_3_algo_report.py
src/coin_profitability_scraper/cryptodelver/: __init__.py  cryptodelver_pipeline.py  step_1_scrape_coins_lists.py  step_3_ingest_coins_lists.py
src/coin_profitability_scraper/minerstat/: __init__.py  minerstat_algo_report_from_api.py  minerstat_pipeline.py  step_1_algo_list.py  step_1a_algo_list.py  step_1b_coin_report_from_api.py  step_1c_coin_list_from_searching.py  step_2_scrape_each_algo.py  step_2a_scrape_each_algo_page.py  step_2b_scrape_each_coin_page.py  step_3_ingest_each_coin_page.py  step_3b_ingest_each_coin_page.py  step_9_dolt_write.py
src/coin_profitability_scraper/miningnow/: __init__.py  miningnow_pipeline.py  step_1_scrape_data.py  step_2a_coin_list.py  step_2b_algo_list.py  step_2c_asic_list.py
src/coin_profitability_scraper/notify/: notify_new_gold_algorithms.py
src/coin_profitability_scraper/poolbay/: __init__.py  step_1a_algorithm_list.py  step_1b_coin_list.py
src/coin_profitability_scraper/reports/: __init__.py  aliases.py  gold_algorithms.py  reports_pipeline.py  silver_stacked_coins.py  silver_stacked_miners.py
src/coin_profitability_scraper/whattomine/: __init__.py  step_1_api_fetch.py  step_1_coins_api_fetch.py  step_2_ingest_coins_api.py  whattomine_pipeline.py  (+1 more)
tests/: test_load_minerstat_data.py  test_step_1_scrape.py  test_step_2_parsing.py
tests/crypto_slate/: test_step_1_scrape.py  test_step_2_parsing.py
tests/minerstat/: __init__.py  test_step_1_algo_list.py  test_step_1a_algo_list.py  test_step_3_ingest_each_coin_page.py  test_step_3b_ingest_each_coin_page.py
tests/miningnow/: __init__.py  test_step_1_scrape_data.py
tests/reports/: __init__.py  test_algo_aliases.py
(+3 files in other folders)
