[project]
name = "coin-profitability-scraper"
version = "0.1.0"
description = "Tool for assessing profitability opportunities of obscure cryptocurrencies"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "backoff>=2.2.1",
    "beautifulsoup4>=4.14.2",
    "fake-useragent>=2.2.0",
    "loguru>=0.7.3",
    "polars==1.31.0",
    "requests>=2.32.5",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pyright>=1.1.406",
    "pytest>=8.4.2",
    "ruff>=0.14.0",
]

[tool.ruff.lint]
select = [
    "ALL"
]
ignore = [
    "COM812",
    "TD",
    "FIX"
]
